--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,5 @@
+
+
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
@@ -26,3 +28,8 @@ body {
   box-shadow: 0px 1px 3px #2a2a2a;
 }
 
+.navbar-inverse .navbar-brand {
+ color: #1eaad9;
+ font-family: 'nobileregular';
+ font-size:26px;
+}
