--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -45,6 +45,38 @@ function initMap() {
     
   </div>
   
+<!-- Modal -->
+<div class="modal fade" id="myPhotoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Add a Photo</h4>
+      </div>
+      <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+        <div class="modal-body">
+          <%= f.input :caption %>
+          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a Photo", :class => 'btn btn-primary' %>
+        </div>
+      <% end %>
+      </div>
+    </div>
+</div>  
+
+  <div class="col-xs-10 col-xs-offset-1">
+  <h1 class="pull-left">Photos</h1>
+  <!-- Button trigger modal -->
+
+  </div>
+  <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myPhotoModal">
+    Add a Photo
+  </button>
+  
+  
 </div>
 <div class="clear"></div>
 
@@ -73,7 +105,6 @@ function initMap() {
     </div>
   </div>
 </div>
-
 <div class="col-xs-10 col-xs-offset-1">
 <h1 class="pull-left">Comments</h1>
 <!-- Button trigger modal -->
@@ -81,6 +112,11 @@ function initMap() {
   Add a comment
 </button>
 </div>
+
+</div>
+
+
+
 
 <div class="clear"></div>
 
