--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -45,6 +45,8 @@ function initMap() {
     
   </div>
   
+
+  
 <!-- Modal -->
 <div class="modal fade" id="myPhotoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -56,6 +58,7 @@ function initMap() {
       <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
         <div class="modal-body">
           <%= f.input :caption %>
+          <%= f.input :picture %>
           
         </div>
         <div class="modal-footer">
@@ -75,6 +78,8 @@ function initMap() {
   <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myPhotoModal">
     Add a Photo
   </button>
+  
+
   
   
 </div>
