--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -44,7 +44,7 @@ function initMap() {
     <% end %>
     
   </div>
-  
+  <div class="clear"></div>
 
   
 <!-- Modal -->
@@ -71,7 +71,7 @@ function initMap() {
 </div>  
 
   <div class="col-xs-10 col-xs-offset-1">
-  <h1 class="pull-left">Photos</h1>
+
   <!-- Button trigger modal -->
 
   </div>
@@ -79,7 +79,15 @@ function initMap() {
     Add a Photo
   </button>
   
-
+<br class="clr" />  
+<h1 class= "text-center">Photos!</h1>
+<br />
+<% @place.photos.each do |photo| %>
+<div class= "col-xs-12 col-sm-6">
+  <%= image_tag photo.picture, :class => 'img-responsive' %>
+  <%= photo.caption %>
+</div>
+<% end %>
   
   
 </div>
