--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -82,13 +82,22 @@ function initMap() {
 <br class="clr" />  
 <h1 class= "text-center">Photos!</h1>
 <br />
-<% @place.photos.each do |photo| %>
-<div class= "col-xs-12 col-sm-6">
-  <%= image_tag photo.picture, :class => 'img-responsive' %>
+
+<div class "row" >
+ <% @place.photos.each do |photo| %>
+<div class= "col-md-4">
+  <blockquote>
   <%= photo.caption %>
+  </blockquote>
+  <%= image_tag photo.picture, :class => 'img-thumbnail' %>
+  
+  
+ 
+  
+  
 </div>
 <% end %>
-  
+</div>  
   
 </div>
 <div class="clear"></div>
