--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -9,13 +9,14 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <%= image_tag 'slider1.jpg', :class =>'img-responsive' %>
+      <div class="img-responsive" style="background-image:url('assets/slider1.jpg');"></div>
+      
       <div class="carousel-caption">
         Find the best food in town.
       </div>
     </div>
     <div class="item">
-      <%= image_tag 'slider2.jpg', :class =>'img-responsive' %>
+      <div class="img-responsive" style="background-image:url('assets/slider2.jpg');"></div>
       <div class="carousel-caption">
         Enjoy the taste of great food!
       </div>
